<package format="2">
  <name>marine_radar_layer</name>
  <version>0.0.0</version>
  <description>
     Costmap Layer for marine radars
  </description>

  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>
  <author>Roland Arsenault</author>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>costmap_2d</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>marine_sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <costmap_2d plugin="${prefix}/costmap_plugins.xml"/>
  </export>
</package>
